--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-/* src/styles/index.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    background-color: #141517;
+}
